<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="vertical"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_width="0dp"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="match_parent"
                    android:layout_height="240dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:contentDescription="@string/hello_image"
                    android:scaleType="centerCrop"
                    android:src="@drawable/unsplash"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginLeft="32dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginEnd="32dp"
                    android:layout_marginRight="32dp"
                    android:fontFamily="@font/crimson_text_bold_italic"
                    android:gravity="center"
                    android:text="@string/first_page_caption"
                    android:textSize="18sp"
                    android:textStyle="bold|italic"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageView" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginLeft="32dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginEnd="32dp"
                    android:layout_marginRight="32dp"
                    android:fontFamily="@font/merriweather_light"
                    android:gravity="center"
                    android:text="@string/first_page_content"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView" />



                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginTop="32dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginRight="8dp"
                        android:fontFamily="@font/roboto"
                        android:text="All About You"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="36sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />


                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="match_parent"
                        android:layout_height="240dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginRight="8dp"
                        android:contentDescription="@string/hello_image"
                        android:scaleType="centerCrop"
                        android:src="@drawable/blackwear"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView3" />

                </androidx.constraintlayout.widget.ConstraintLayout>


                <!--                <include-->
                <!--                    -->
                <!--                    layout="@layout/how_it_works" />-->

                <!--                <include-->
                <!--                    layout="@layout/style_video_layout" />-->




            </LinearLayout>

            <!--        <ImageView-->
            <!--            android:id="@+id/imageView"-->
            <!--            android:layout_width="0dp"-->
            <!--            android:layout_height="240dp"-->
            <!--            android:layout_marginStart="8dp"-->
            <!--            android:layout_marginLeft="8dp"-->
            <!--            android:layout_marginTop="8dp"-->
            <!--            android:layout_marginEnd="8dp"-->
            <!--            android:layout_marginRight="8dp"-->
            <!--            android:contentDescription="@string/hello_image"-->
            <!--            android:scaleType="centerCrop"-->
            <!--            android:src="@drawable/blackwear"-->
            <!--            app:layout_constraintEnd_toEndOf="parent"-->
            <!--            app:layout_constraintStart_toStartOf="parent"-->
            <!--            app:layout_constraintTop_toTopOf="parent" />-->

            <!--        <TextView-->
            <!--            android:id="@+id/textView"-->
            <!--            android:layout_width="0dp"-->
            <!--            android:layout_height="wrap_content"-->
            <!--            android:layout_marginStart="32dp"-->
            <!--            android:layout_marginLeft="32dp"-->
            <!--            android:layout_marginTop="32dp"-->
            <!--            android:layout_marginEnd="32dp"-->
            <!--            android:layout_marginRight="32dp"-->
            <!--            android:fontFamily="@font/crimson_text_bold_italic"-->
            <!--            android:gravity="center"-->
            <!--            android:text="@string/first_page_caption"-->
            <!--            android:textSize="18sp"-->
            <!--            android:textStyle="bold|italic"-->
            <!--            app:layout_constraintEnd_toEndOf="parent"-->
            <!--            app:layout_constraintStart_toStartOf="parent"-->
            <!--            app:layout_constraintTop_toBottomOf="@+id/imageView" />-->

            <!--        <TextView-->
            <!--            android:id="@+id/textView2"-->
            <!--            android:layout_width="0dp"-->
            <!--            android:layout_height="wrap_content"-->
            <!--            android:layout_marginStart="32dp"-->
            <!--            android:layout_marginLeft="32dp"-->
            <!--            android:layout_marginTop="32dp"-->
            <!--            android:layout_marginEnd="32dp"-->
            <!--            android:layout_marginRight="32dp"-->
            <!--            android:fontFamily="@font/merriweather_light"-->
            <!--            android:gravity="center"-->
            <!--            android:text="@string/first_page_content"-->
            <!--            android:textSize="16sp"-->
            <!--            android:textStyle="bold"-->
            <!--            app:layout_constraintEnd_toEndOf="parent"-->
            <!--            app:layout_constraintHorizontal_bias="0.0"-->
            <!--            app:layout_constraintStart_toStartOf="parent"-->
            <!--            app:layout_constraintTop_toBottomOf="@+id/textView" />-->

            <!--            <include-->
            <!--                layout="@layout/how_it_works"-->
            <!--                app:layout_constraintHorizontal_bias="0.0"-->
            <!--                app:layout_constraintLeft_toLeftOf="parent"-->
            <!--                app:layout_constraintRight_toRightOf="parent"-->
            <!--                app:layout_constraintTop_toBottomOf="@+id/textView2" />-->


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>





<!--    <TextView-->
<!--        android:id="@+id/textView3"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginStart="8dp"-->
<!--        android:layout_marginLeft="8dp"-->
<!--        android:layout_marginTop="32dp"-->
<!--        android:layout_marginEnd="8dp"-->
<!--        android:layout_marginRight="8dp"-->
<!--        android:fontFamily="@font/roboto"-->
<!--        android:text="All About You"-->
<!--        android:textColor="@color/colorPrimaryDark"-->
<!--        android:textSize="36sp"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent" />-->


<!--    <ImageView-->
<!--        android:id="@+id/imageView"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="240dp"-->
<!--        android:layout_marginStart="8dp"-->
<!--        android:layout_marginLeft="8dp"-->
<!--        android:layout_marginEnd="8dp"-->
<!--        android:layout_marginRight="8dp"-->
<!--        android:contentDescription="@string/hello_image"-->
<!--        android:scaleType="centerCrop"-->
<!--        android:src="@drawable/blackwear"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/textView3" />-->

<!--    <VideoView-->
<!--        android:id="@+id/videoView"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="400dp"-->
<!--        android:layout_margin="16dp"-->
<!--        app:layout_constraintLeft_toLeftOf="parent"-->
<!--        app:layout_constraintRight_toRightOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent"></VideoView>-->


<!--    <VideoView-->
<!--        android:id="@+id/videoView3"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="0dp"-->
<!--        android:layout_centerHorizontal="true"-->
<!--        android:layout_centerVertical="true"-->
<!--        android:layout_marginTop="32dp"-->
<!--        android:layout_marginRight="8dp"-->
<!--        android:layout_marginBottom="32dp"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="0.0"-->
<!--        app:layout_constraintLeft_toLeftOf="parent"-->
<!--        app:layout_constraintRight_toRightOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/textView3"-->
<!--        app:layout_constraintVertical_bias="1.0"-->
<!--        android:layout_marginEnd="8dp" />-->
<!--        <include-->
<!--        layout="@layout/style_video_layout" />-->


    <!--    <com.google.android.exoplayer2.ui.PlayerView-->
<!--        android:id="@+id/video_view"-->
<!--        android:layout_width="0dp"-->
<!--        android:layout_height="0dp"-->
<!--        android:layout_marginStart="8dp"-->
<!--        android:layout_marginLeft="8dp"-->
<!--        android:layout_marginTop="82dp"-->
<!--        android:layout_marginEnd="8dp"-->
<!--        android:layout_marginRight="8dp"-->
<!--        android:layout_marginBottom="83dp"-->
<!--        app:layout_constraintBottom_toTopOf="@+id/textView4"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/textView3" />-->

<!--    <TextView-->
<!--        android:id="@+id/textView4"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginStart="8dp"-->
<!--        android:layout_marginLeft="8dp"-->
<!--        android:layout_marginEnd="8dp"-->
<!--        android:layout_marginRight="8dp"-->
<!--        android:layout_marginBottom="32dp"-->
<!--        android:text="TextView"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent" />-->






</androidx.constraintlayout.widget.ConstraintLayout>